minor fixes for JDK 17